objects/SBQQ__UsageRateCard__c.object
<CustomObject>
    <fields>
        <fullName>SBQQ__AttributeField__c</fullName>
        <inlineHelpText>Group usage rates by the selected field during document output and billing</inlineHelpText>
        <label>Attribute Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Usage Price Method</fullName>
                    <label>UsagePriceMethod__c</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BillingFrequency__c</fullName>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__OriginalUsageRateCard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The usage rate card that you cloned to create this usage rate card</inlineHelpText>
        <label>Original Usage Rate Card</label>
        <referenceTo>SBQQ__UsageRateCard__c</referenceTo>
        <relationshipLabel>Usage Rate Cards (Original Usage Rate Card)</relationshipLabel>
        <relationshipName>UsageRateCards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The quote line that this usage rate card covers</inlineHelpText>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Usage Rate Cards</relationshipLabel>
        <relationshipName>UsageRateCards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The subscription that this usage rate card covers</inlineHelpText>
        <label>Subscription</label>
        <referenceTo>SBQQ__Subscription__c</referenceTo>
        <relationshipLabel>Usage Rate Cards</relationshipLabel>
        <relationshipName>UsageRateCards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__TemplateRateCard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The usage rate card that you added to the original quote</inlineHelpText>
        <label>Template Rate Card</label>
        <referenceTo>SBQQ__UsageRateCard__c</referenceTo>
        <relationshipLabel>Quoted Rate Cards</relationshipLabel>
        <relationshipName>QuotedRateCards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Type__c</fullName>
        <inlineHelpText>Choose how Salesforce Billing bills usage rates for this usage rate card. Range bills a single rate while slab bills all applicable usage rates.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Range</fullName>
                </value>
                <value>
                    <fullName>Slab</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>This object is under development.</description>
    <label>Usage Rate Card (Reserved)</label>
    <nameField>
        <label>Usage Rate Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Usage Rate Cards (Reserved)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>SBQQ__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>